double book lists

--- a/MyTracker/app/src/main/res/values/themes.xml
+++ b/MyTracker/app/src/main/res/values/themes.xml
@@ -19,6 +19,12 @@
         <item name="windowNoTitle">true</item>
     </style>
 
+    <style name="AppTheme.ActionBar.Transparent" parent="Theme.MyTracker">
+        <item name="android:windowContentOverlay">@null</item>
+        <item name="windowActionBarOverlay">true</item>
+        <item name="colorPrimary">@android:color/transparent</item>
+    </style>
+
     <style name="Theme.MyTracker.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
     <style name="Theme.MyTracker.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
